cmake_minimum_required(VERSION 3.26)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

project(openvr_metrics)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(NOT DEFINED ENABLE_VULKAN_VALIDATION)
    set(ENABLE_VULKAN_VALIDATION OFF CACHE BOOL "Enable Vulkan validation layers" FORCE)
endif()

# Renderer configuration

# Vulkan validation layer adds extra reporting that may also catch validation layers orginating from external sources, ie. SteamVR
set(ENABLE_VULKAN_VALIDATION OFF)

set(OpenVR_ROOT ${CMAKE_SOURCE_DIR}/3rdparty/OpenVR)
set(GLM_ROOT ${CMAKE_SOURCE_DIR}/3rdparty/glm)
set(Json_ROOT ${CMAKE_SOURCE_DIR}/3rdparty/json)

find_package(OpenVR REQUIRED)

# Add GLM (avoiding an annoying target it adds by creating a dummy one with the same name).
add_custom_target(uninstall)
add_subdirectory(${GLM_ROOT})

# Include rest of the CMake bindings
add_subdirectory(3rdparty)

add_subdirectory(${Json_ROOT} EXCLUDE_FROM_ALL)

message(STATUS "ENABLE_VULKAN_VALIDATION = ${ENABLE_VULKAN_VALIDATION}")

set(SOURCES
    "src/Main.cpp"
    "src/core/Settings.cpp"
    "src/overlay/Overlay.cpp"
    "src/overlay/controller/ControllerOverlay.cpp"
    "src/overlay/dashboard/DashboardOverlay.cpp"
    "src/renderer/VulkanRenderer.cpp"
)

if (WIN32)
    list(APPEND SOURCES
        "src/core/monitor/TaskMonitor_Win32.cpp"
    )
endif()

if (UNIX)
    list(APPEND SOURCES
        "src/core/monitor/TaskMonitor_Linux.cpp"
    )
endif()

add_executable(metrics_overlay ${SOURCES})

if (UNIX AND NOT APPLE)
    set_target_properties(metrics_overlay PROPERTIES
        BUILD_RPATH "$ORIGIN"
        INSTALL_RPATH "$ORIGIN"
        INSTALL_RPATH_USE_LINK_PATH FALSE
    )
endif()

target_include_directories(metrics_overlay PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)

# Windows executable icon
if (WIN32)
    target_sources(metrics_overlay PRIVATE "resources/winicon.rc")
endif()

target_compile_features(metrics_overlay PUBLIC cxx_std_23)

if (WIN32)
    target_link_libraries(metrics_overlay PRIVATE
        OpenVR::API
        ImGui
        glm::glm
        nlohmann_json::nlohmann_json
        pdh
	dxgi
    )
else()
    target_link_libraries(metrics_overlay PRIVATE
        OpenVR::API
        ImGui
        glm::glm
        nlohmann_json::nlohmann_json
    )
endif()

target_compile_options(metrics_overlay PRIVATE
    $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-Wall -Wextra -Wpedantic -Werror>
)

if (ENABLE_VULKAN_VALIDATION)
    add_definitions(-DENABLE_VULKAN_VALIDATION)
endif()

set(CUSTOM_OUTPUT_DIR "${CMAKE_SOURCE_DIR}/bin")

add_custom_target(metrics_overlay_resources)

if (WIN32)
    set(OPENVR_RUNTIME_BINARY "$<TARGET_FILE:OpenVR::API>")
else()
    set(OPENVR_RUNTIME_BINARY "${OpenVR_BINARY}")
endif()

add_custom_command(
    TARGET metrics_overlay_resources POST_BUILD
    COMMENT "Copying Resources"
    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/resources ${CUSTOM_OUTPUT_DIR}
)

add_dependencies(metrics_overlay metrics_overlay_resources)

add_custom_command(
    TARGET metrics_overlay POST_BUILD
    COMMENT "Copying Executable and DLLs"
    COMMAND ${CMAKE_COMMAND} -E copy -t ${CUSTOM_OUTPUT_DIR} $<TARGET_FILE:metrics_overlay>
    COMMAND ${CMAKE_COMMAND} -E copy -t ${CUSTOM_OUTPUT_DIR} ${OPENVR_RUNTIME_BINARY}
    COMMAND_EXPAND_LISTS
)
